--- a/frontend/css/registration.css
+++ b/frontend/css/registration.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-    background-image: url("background.jpg");
+    background-image: url("../../resources/background.jpg");
     background-position: center;
     width: 100%;
     height: 100vh; 
