--- a/frontend/css/homepage.css
+++ b/frontend/css/homepage.css
@@ -1,20 +1,31 @@
-:root {
-    --main-color: #270047;
-    --color-dark: #1D2231;
-    --text-grey: #8390A2;
-    --text-on-dark-background: #eaeaea;
+@font-face {
+    font-family: 'Plovdiv Script';
+    src: url('../../resources/PlovdivTypeface-Fonts/PlovdivTypeface-Fonts/OTF/PlovdivSans.otf');
+    font-weight: normal;
+    font-style: normal;
 }
+
+:root {
+    --main-color: #62BEC9;
+    --color-dark: #1D2231;
+    --text-grey: #506463;
+    --text-on-dark-background: #FCFCFC;
+    font-family: 'Plovdiv Script', 'PlovdivSans';
+    color: var(--text-grey);
+}
+
 
 * {
     padding: 0;
+    background: #FCFCFC;
     margin: 0;
     box-sizing: border-box;
     list-style-type: none;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+    position: relative;
 }
 
-.sidebar {
+/* .sidebar {
     width: 345px;
     position: fixed;
     left: 0;
@@ -65,14 +76,17 @@
 .sidebar-menu a span:first-child {
     font-size: 1.5rem;
     padding-right: 1rem;
-}
+}*/
 
 .site-logo {
-    height:5%;
-    width:5%;
-    object-fit: cover
+    height: 6.5%;
+    width: 6.5%;
+    object-fit: cover;
+    margin-right: 3%;
+    margin-left: 10%;
 }
 
+/*
 #nav-toggle:checked+.sidebar {
     cursor: pointer;
     width: 70px;
@@ -86,40 +100,30 @@
 
 #nav-toggle:checked+.sidebar li a {
     padding-left: 0rem;
-}
-
+} 
 #nav-toggle:checked+.sidebar .sidebar-brand h2 span:last-child,
 #nav-toggle:checked+.sidebar li a span:last-child {
     display: none;
 }
-
+*/
+/* 
 #nav-toggle:checked~.main-content {
     margin-left: 70px;
-}
+} 
 
 #nav-toggle:checked~.main-content header {
     width: calc(100% - 70px);
     left: 70px;
-}
-
-.main-content {
-    transition: margin-left 300ms;
-    margin-left: 345px;
-}
-
-.main-content h2 .las.la-bars {
-    cursor: pointer;
-}
+} */
 
 header {
-    background: #fff;
+    background: #FCFCFC;
     display: flex;
-    justify-content: space-between;
-    padding: 1rem 1.5rem;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    justify-content: right;
+    padding: 1rem;
+    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); */
     position: fixed;
-    left: 345px;
-    width: calc(100% - 345px);
+    width: 100%;
     top: 0;
     z-index: 100;
     transition: left 300ms;
@@ -137,7 +141,7 @@ header label span {
     font-size: 1.7rem;
 }
 
-.search-wrapper {
+/* .search-wrapper {
     border: 1px solid #ccc;
     border-radius: 30px;
     height: 50px;
@@ -157,9 +161,12 @@ header label span {
     padding: 0.5rem;
     border: none;
     outline: none;
-}
+} */
 
-.user-wrapper {
+.logout-wrapper, 
+.home-wrapper, 
+.map-wrapper, 
+.about-us-wrapper {
     display: flex;
     align-items: center;
     text-align: center;
@@ -169,16 +176,35 @@ header label span {
     margin-right: 0.5rem;
 }
 
-.user-wrapper small {
+/* .user-wrapper small,
+.home-wrapper small, 
+.map-wrapper small, 
+.about-us-wrapper small {
     display: inline-block;
     color: var(--text-grey);
-}
+} */
 
 main {
-    margin-top: 85px;
-    padding: 2rem 1.5rem;
-    background: #f1f5f9;
+    margin-top: 140px;
     min-height: calc(100vh - 90px);
+}
+
+.main-text,
+.subtitle {
+    padding-left: 3%;
+    padding-bottom: 3%;
+}
+
+.title-text h1 {
+    display: inline;
+}
+
+.title-text .detskite {
+    color: #F24630;
+}
+
+.title-text .ploshtadki {
+    color: #FECD1B;
 }
 
 .title-page {
@@ -186,9 +212,46 @@ main {
     background-image: url("../../resources/background.jpg");
     background-position: center;
     width: 100%;
-    height: 100vh; 
+    height: 110vh;
     background-size: cover;
 }
+
+.map-page {
+    padding: 3%;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: row;
+}
+
+
+.map-view img {
+    width: 700px;
+}
+
+ 
+.map-title,
+.map-title-last,
+.number-of-playgrounds {
+    padding-right: 3rem;
+    text-align: right;
+}
+
+.map-title,
+.map-title-last {
+    color: #F24630;
+}
+
+.map-title-last {
+    padding-bottom: 7%;
+}
+
+.number-of-playgrounds {
+    padding-top: 7%;
+    font-size: 30px;
+}
+
+
+/* ////////////////////////////////////////////////////// */
 
 .tiles {
     display: grid;
@@ -221,7 +284,7 @@ main {
 .single-tile:last-child h1,
 .single-tile:last-child div:last-child span,
 .single-tile:last-child div:first-child span {
-    color: #fff;
+    color: #FCFCFC;
 }
 
 .recent-grid {
@@ -229,7 +292,7 @@ main {
 }
 
 .card {
-    background: #fff;
+    background: #FCFCFC;
     border-radius: 5px;
 }
 
@@ -241,7 +304,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid #FCFCFC;
 }
 
 .card-header-btns {
@@ -251,7 +314,7 @@ main {
 .card-header button {
     background: var(--main-color);
     border-radius: 10px;
-    color: #fff;
+    color: #FCFCFC;
     font-size: .8rem;
     padding: .5rem 1rem;
     border: 1px solid var(--main-color);
@@ -261,8 +324,8 @@ main {
 
 .card-header button:hover {
     transition: background 1s;
-    background-color: #6601B0;
-    color: #fff;
+    background-color: #62BEC9;
+    color: #FCFCFC;
 }
 
 table {
@@ -270,8 +333,8 @@ table {
 }
 
 thead tr {
-    border-top: 1px solid #f0f0f0;
-    border-bottom: 2px solid #f0f0f0;
+    border-top: 1px solid #FCFCFC;
+    border-bottom: 2px solid #FCFCFC;
 }
 
 thead td {
@@ -318,13 +381,12 @@ tr td:last-child {
     position: absolute;
     top: 15%;
     left: 28%;
-    background: #270047;
+    background: #62BEC9;
     padding: 50px 60px 70px;
-    color: #f0f0f0;
+    color: #FCFCFC;
     box-sizing: border-box;
     font-weight: bold;
     border-radius: 10px;
-    font-family: 'Poppins', sans-serif;
 }
 
 #project-form {
@@ -334,7 +396,7 @@ tr td:last-child {
 #add-project-modal h2,
 #import-modal h2 {
     text-align: center;
-    color: #f0f0f0;
+    color: #FCFCFC;
 }
 
 #import-modal div h4 {
@@ -347,7 +409,7 @@ tr td:last-child {
     width: 30px;
     height: 4px;
     border-radius: 3px;
-    background: #fff;
+    background: #FCFCFC;
     position: relative;
     bottom: -12px;
     left: 50%;
@@ -378,27 +440,32 @@ tr td:last-child {
 
 #add-project-btn,
 #cancel-add-project-btn,
-#logout-btn,
+/* #logout-btn, */
+.logout-wrapper div,
+.home-wrapper div,
+.about-us-wrapper div, 
+.map-wrapper div,
 #import-chosen-file-btn,
 #cancel-import-btn {
-    background: var(--text-on-dark-background);
-    border-radius: 10px;
-    color: var(--main-color);
-    font-size: .8rem;
+    background-color: #FCFCFC;
+    color: var(--text-grey);
     padding: .5rem 1rem;
-    border: 1px solid #fff;
-    font-weight: bold;
     cursor: pointer;
+    border: none;
+    font-size: 20px;
 }
 
 #add-project-btn:hover,
 #cancel-add-project-btn:hover,
-#logout-btn:hover,
+/* #logout-btn:hover, */
+.logout-wrapper div:hover,
+.home-wrapper div:hover,
+.map-wrapper div:hover,
+.about-us-wrapper div:hover,
 #import-chosen-file-btn:hover,
 #cancel-import-btn:hover {
     transition: background 1s;
-    background-color: #6601B0;
-    color: #fff;
+    color: #62BEC9;
 }
 
 .project-input:hover {
@@ -447,13 +514,12 @@ form textarea {
         position: absolute;
         top: 18%;
         left: 23%;
-        background: #270047;
+        background: #62BEC9;
         padding: 50px 60px 70px;
-        color: #f0f0f0;
+        color: #FCFCFC;
         box-sizing: border-box;
         font-weight: bold;
         border-radius: 10px;
-        font-family: 'Poppins', sans-serif;
     }
 }
 
@@ -474,13 +540,12 @@ form textarea {
         position: absolute;
         top: 18%;
         left: 18%;
-        background: #270047;
+        background: #62BEC9;
         padding: 50px 60px 70px;
-        color: #f0f0f0;
+        color: #FCFCFC;
         box-sizing: border-box;
         font-weight: bold;
         border-radius: 10px;
-        font-family: 'Poppins', sans-serif;
     }
 }
 
@@ -509,7 +574,7 @@ form textarea {
         height: 40px;
         width: 40px;
         border-radius: 50%;
-        color: #fff;
+        color: #FCFCFC;
         display: flex;
         align-items: center;
         justify-content: center !important;
@@ -559,13 +624,12 @@ form textarea {
         position: absolute;
         top: 25%;
         left: 10%;
-        background: #270047;
+        background: #62BEC9;
         padding: 50px 60px 70px;
-        color: #f0f0f0;
+        color: #FCFCFC;
         box-sizing: border-box;
         font-weight: bold;
         border-radius: 10px;
-        font-family: 'Poppins', sans-serif;
     }
 }
 
@@ -584,7 +648,7 @@ form textarea {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #62BEC9;
     transition: opacity 300ms ease-in-out;
 }
 
@@ -592,7 +656,7 @@ form textarea {
 /* make table rows interactive */
 
 .card-body tr:hover td {
-    color: #fff;
+    color: #FCFCFC;
     cursor: pointer;
     transition: background .1s;
     background-color: var(--main-color);
@@ -603,14 +667,14 @@ form textarea {
     color: #222;
     cursor: auto;
     transition: none;
-    background-color: #ffff;
+    background-color: #FCFCFC;
 }
 
 
 /* list items active */
 
 li .active-hover {
-    background: #fff;
+    background: #FCFCFC;
     color: var(--main-color);
     transition: background 0.2s;
     padding-top: 1rem;
@@ -621,8 +685,4 @@ li .active-hover {
 li a .active-hover {
     color: var(--main-color);
     transition: background 0.2s;
-}
-
-#logout-btn{
-    border:#270047 2px solid;
 }
