--- a/frontend/css/playgroundForm.css
+++ b/frontend/css/playgroundForm.css
@@ -5,3 +5,19 @@
     font-style: normal;
 }
 
+:root {
+    --main-color: #CDEAEE;
+    --color-dark: #1D2231;
+    --text-grey: #506463;
+    --text-on-dark-background: #FCFCFC;
+    font-family: 'Plovdiv Script', 'PlovdivSans';
+    color: var(--text-grey);
+}
+
+body {
+    width: 70%;
+}
+
+textarea {
+    width: 50%;
+}
