--- a/frontend/css/map.css
+++ b/frontend/css/map.css
@@ -4,3 +4,9 @@
     background: rgba(252, 252, 252, 0);
     margin-bottom: 30px;
 }
+@media only screen and (max-width: 560px) {
+    #map {
+        width: 100%;
+        height: 80%;
+    }
+}
