--- a/frontend/css/map.css
+++ b/frontend/css/map.css
@@ -1,12 +1,19 @@
 #map {
-    width: 100%;
-    height: 100%;
+    width: 98vw;
+    height: 85vh;
     background: rgba(252, 252, 252, 0);
-    margin-bottom: 30px;
 }
+
+.map-view {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @media only screen and (max-width: 560px) {
     #map {
-        width: 100%;
-        height: 80%;
+        width: 95vw;
+        height: 60vh;
     }
 }
