--- a/frontend/css/homepage.css
+++ b/frontend/css/homepage.css
@@ -450,33 +450,71 @@ li a .active-hover {
 /* Style for the container */
 .container {
   display: flex;
-  gap: 20px;
+  justify-content: center;
+  gap: 15%;
+  margin: 50px 100px;
 }
 
 /* Style for the outer rectangle */
-.outer {
+.left-outer-column,
+.middle-outer-column,
+.right-outer-column {
   width: 300px;
-  height: 200px;
-  background-color: #ccc;
+  height: 400px;
   position: relative;
   padding: 20px;
+  color: black;
+  border-radius: 10px;
 }
 
-/* Style for the inner rectangle */
-.inner {
-  width: 80%;
-  height: 60%;
-  background-color: #f0f0f0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.left-outer-column {
+    background-color: #D0DEAE;
 }
 
-/* Text style */
-p {
-  margin: 0;
+.middle-outer-column {
+    background-color: #EFB39B;
 }
+
+.right-outer-column {
+    background-color: #F3DFAC;
+}
+
+.left-inner-column,
+.middle-inner-column, 
+.right-inner-column {
+    width: 60%; /* Adjusted size for the inner rectangle */
+    height: 70px; /* Adjusted size for the inner rectangle */
+    position: absolute;
+    top: 0; /* Aligns the inner rectangle at the top */
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; /* Aligns content at the top */
+    color: white;
+    font-size: 30px;
+    border-radius: 10px;
+  }
+
+.left-inner-column {
+    background-color: #A3C939;
+}
+
+.middle-inner-column {
+    background-color: #EF452D;
+}
+
+.right-inner-column {
+    background-color: #FEC91B;
+}
+  
+  /* Text style for the outer paragraphs */
+  .outer-text {
+    margin-top: 70px; /* Margin below the inner rectangle */
+    text-align: justify;
+    max-width: 100%; /* Ensures text doesn't exceed the outer rectangle */
+    /* overflow: hidden; Hides text that exceeds the max width */
+    /* text-overflow: ellipsis; Shows ellipsis for overflowed text */
+    /* white-space: nowrap; Prevents text from wrapping */
+  }
+
