--- a/frontend/css/playground.css
+++ b/frontend/css/playground.css
@@ -112,3 +112,8 @@ button {
     box-shadow:0 0 15px 4px rgba(0,0,0,0.09);
     border-radius: 10px;
 }
+
+.icon {
+    height: 4%;
+    width: 4%;
+}
