--- a/frontend/kidsground/src/static/stylesheets/playground.css
+++ b/frontend/kidsground/src/static/stylesheets/playground.css
@@ -91,11 +91,27 @@ button {
 }
 
 .fence-icon {
-    height: 2%;
-    width: 2%;
+    height: 1%;
+    width: 1%;
 }
 
-.picture-slider {
-    height: 30%;
-    width:100%;
+.playground-picture {
+    height: 60vh;
+    width:90vw;
+}
+
+.card {
+    margin:10px;
+    border:50px;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    transition: 0.3s;
+    width:fit-content;
+}
+
+.card:hover {
+    /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); */
+}
+
+.icon {
+    margin-right: 1vw;
 }
